Support worker api to spawn to different jdk.